Added option to freeze backbone model during training.
Modified models/model.py to include freeze_backbone parameter and logic to freeze parameters.
Config files are updated to allow setting freeze_backbone option.
pipeline.py updated to pass freeze_backbone parameter when initializing the model.

--- a/plft/configs/template.yaml
+++ b/plft/configs/template.yaml
@@ -27,8 +27,8 @@ head:
     output_dim: 1               # set 1 for regression; or leave null to auto infer from dataset if available
     num_hidden_layers: 1
     dropout_rate: 0.1
-    classification_mode: residue
-    pooling_strategy: mean
+    classification_mode: protein # choose residue, protein. Make sure it is consistent with model.task_type
+    pooling_strategy: mean # only used if protein classification mode, choose between mean, cls
 
 
 peft:
